src/App.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Bebas Neue", cursive;
}

/* [data-theme="dark"] {
    --background: orange;
    --text-primary: white;
    --text-secondary: grey;
    --accent: darkred;
} */

.dark-mode {
    cursor: pointer;
}

.App {
    background-color: hsl(236, 33%, 92%);
    height: 100vh;
    width: 100%;
    background-image: url("../public/images/bg-desktop-light.jpg");
    background-size: contain;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
}

.App.dark {
    background-color: hsl(235, 21%, 11%);
    background-image: url("../public/images/bg-desktop-dark.jpg");
}

.container {
    /* background-color: aqua; */
    width: 100%;
    max-width: 650px;
    margin-top: 50px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    letter-spacing: 10px;
    font-size: 1.5rem;
    /* font-size: 25px; */
    color: white;
}

.task-input {
    display: flex;
    align-items: center;
    background-color: hsl(0, 0%, 98%);
    /* background-color: hsl(235, 24%, 19%); */
    width: 100%;
    height: 70px;
    border-radius: 6px;
    margin-top: 15px;
}

.task-input.dark {
    background-color: hsl(235, 24%, 19%);
}

.check {
    /* margin-top: 20px; */
    flex-basis: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.check-mark {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    /* background-color: orange; */
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 1px solid hsl(240, 12%, 44%);
}

.check-mark:hover {
    /* background: linear-gradient(
        to bottom,
        hsl(240, 12%, 44%) 0%,
        hsl(240, 12%, 44%) 100%
    ); */
    background: linear-gradient(135deg, #55ddff 0%, #c058f3 100%);
}

.check-mark.checked {
    /* background: linear-gradient(
        to bottom,
        hsl(240, 12%, 44%) 0%,
        hsl(240, 12%, 44%) 100%
    ); */
    background: linear-gradient(135deg, #55ddff 0%, #c058f3 100%);
}

.check-mark img {
    visibility: hidden;
}

.check-mark.checked img,
.check-mark:hover img {
    visibility: visible;
}

.new-todo-input {
    flex-grow: 1;
    display: flex;
    align-items: center;
}

.new-todo-input form {
    flex-grow: 1;
    display: flex;
}

#todo-input {
    width: 100%;
    border: none;
    outline: none;
    font-size: 18px;
    background-color: transparent;
    color: hsl(235, 18%, 47%) !important;
    letter-spacing: 1px;
}

#todo-input.dark:-webkit-autofill,
#todo-input.dark:-webkit-autofill:hover,
#todo-input.dark:-webkit-autofill:focus,
#todo-input.dark:-webkit-autofill:active {
    transition: background-color 5000s;
    -webkit-text-fill-color: #fff !important;
}

.task-list-wrapper {
    margin-top: 30px;
    border-radius: 6px;
    /* height: 400px; */
    background-color: hsl(0, 0%, 98%);
    /* box-shadow: 0px 0px 30px hsl(233, 11%, 84%); */
    box-shadow: 8px 10px 17px hsl(233deg 4% 49%);
    overflow: hidden;
}

.task-list-wrapper.dark {
    background-color: hsl(235, 24%, 19%);
}

.task-list {
    width: 100%;
    /* height: 70px; */
}

.task-text {
    color: hsl(235, 18%, 47%);
}

.task-text.checked {
    text-decoration: line-through;
    /* color: hsl(233, 14%, 35%); */
    color: hsl(233, 11%, 84%);
}

.task-text.checked.dark {
    color: hsl(233, 14%, 35%);
}

.remove-cross {
    margin: auto 20px auto auto;
    padding-top: 8px;
}

.task-item {
    width: 100%;
    color: hsl(234, 39%, 85%);
    height: 70px;
    display: flex;
    align-items: center;
    cursor: pointer;
    border-bottom: 1px solid hsl(237, 14%, 26%);
    transition: all 0.3s ease;
    transition-property: box-shadow, transform, border-color;
    letter-spacing: 1px;
    font-size: 18px;
}

.task-item:hover {
    transform: translateY(-2px);
    /* box-shadow: 0px 0px 7px 0px hsl(235, 21%, 11%);  */
    box-shadow: 0px 0px 7px 0px;
}

.task-items-info {
    /* color: white;hsl(0, 0%, 98%) */
    /* color: hsl(235, 14%, 35%); */
    color: hsl(235, 18%, 47%);
    width: 100%;
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: hsl(0, 0%, 98%);
    /* border-top: 1px solid hsl(237, 14%, 26%); */
    /* border-radius: 6px; */
    padding: 0 30px 0 30px;
    letter-spacing: 1px;
    font-size: 18px;
}

.task-items-info.dark {
    background-color: hsl(235, 24%, 19%);
}

.items-left p span {
    color: hsl(220, 98%, 61%);
    padding-right: 5px;
}

.items-statuses {
    display: flex;
    align-items: center;
    cursor: pointer;
}

.items-statuses__item {
    padding: 0 6px;
}

.items-statuses .active {
    color: hsl(220, 98%, 61%);
}

.items-statuses__item:hover,
.items-clear:hover {
    color: hsl(220, 98%, 61%);
}

.items-clear {
    cursor: pointer;
}

.dark-mode-toggle {
    background-color: white;
    color: black;
}

@media (max-width: 768px) {
    .App {
        background-size: auto;
    }
    .container {
        width: 88%;
    }
    .task-items-info {
        padding: 0 8px 0 8px;
        height: 98px;
    }
    .task-items-info .items-statuses {
        display: flex;
        /* flex-direction: column; */
        align-items: center;
        justify-content: center;
        width: 80%;
        height: 80%;
        border-left: 1px solid hsl(237, 14%, 26%);
        border-right: 1px solid hsl(237, 14%, 26%);
    }
    .items-left p {
        display: flex;
        flex-direction: column;
        text-align: center;
        /* border-right: 1px solid hsl(237, 14%, 26%); */
    }
    .items-clear span {
        display: flex;
        flex-direction: column;
        /* justify-content: flex-end; */
        /* align-items: flex-end; */
        text-align: center;
    }
}

